2000-09-19 20:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
 +contrib/pdflib/pdfhbdoc.c
   *Wraper functions for PDF generation for HBDOC
 +contrib/pdflib/pdflib.h
     *PDflib header file
 *makefile.bc
  hb_slex.bc
   * Added support for PDF generation when -DPDF is used
 +utils/hdboc/genpfdf1.prg
   *PDF file generation support
 *utils/hdboc/hbdoc.prg
   +Added code to support PDF generation then compiled with -dPDF
 *contrib/rdd_ads/doc/en/adsfuncs.txt
   *small formating
2000-09-20 23:36 UTC+0200 JFL (mafact) <jfl@mafact.com>
  * harbour/include/hbsetup.ch
    + added a #define HB_CLS_ENFORCERO to enable full ReadOnly test on DATA
  * harbour/source/pp/ppcore.c
    minor reformating whith some comment and CygWin
  * harbour/source/vm/classes.c
    + added a #define HB_CLS_ENFORCERO to enable full ReadOnly test on DATA
      (Now disabled by default to extend compatibility with TopClass and VO)
      (will be completed later)

2000-09-20 15:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * include/hbver.h
     * Bumped revision to "c" and date to 2000-09-20 for
       an interim release with the ADS RDD indexing fix.

2000-09-20 11:20 UTC+0800 Brian Hays <bhays@abacuslaw.com>
   * source\rdd\dbf1.c
      !removed reference to unknown pItem in HB_TRACE for hb_dbfUnlockAllRecords
   * doc/en/garbage.txt
      * minor grammar fixes
   * source/rdd/workarea.c
      ! added Item lock/unlock to SetFilter/Clearfilter so GC won't
        de-allocate the codeblock
        (fixes error at close of app for a bad pointer in hb_xfree)

2000-09-20 13:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/workarea.c
   * include/hbrddwrk.h
     * added hb_waOrderCondition() function ( from old RDD ) - now indexing
       works in RDD ADS again

2000-09-20 10:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/pp/ppcore.c
     * fixed bug, reported by J. Lefebvre

2000-09-19 10:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c