@@ -1,3 +1,8 @@
+2000-09-21 00:40 UTC+0800 Brian Hays <bhays@abacuslaw.com>
+   * contrib/rdd_ads/ads1.c
+      ! fixed buffer allocation and item assignment in adsOrderListFocus
+        Bug was that a 10-byte tag name came back with an 11th garbage byte
+
 2000-09-19 20:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
  +contrib/pdflib/pdfhbdoc.c
    *Wraper functions for PDF generation for HBDOC
@@ -12,6 +17,7 @@
    +Added code to support PDF generation then compiled with -dPDF
  *contrib/rdd_ads/doc/en/adsfuncs.txt
    *small formating
+
 2000-09-20 23:36 UTC+0200 JFL (mafact) <jfl@mafact.com>
   * harbour/include/hbsetup.ch
     + added a #define HB_CLS_ENFORCERO to enable full ReadOnly test on DATA
